Save/Update files [ci skip]

--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -175,7 +175,7 @@
  NEW_ACHIEVEMENT_7_26_NAME:0 "沼地の辺境伯"
  NEW_ACHIEVEMENT_7_26_DESC:0 "2つ以上の湿地の州を有する辺境伯を持つ。"
  NEW_ACHIEVEMENT_7_27_NAME:0 "王の中の王"
- NEW_ACHIEVEMENT_7_27_DESC:1 "アルダビールで開始し、ペルシアを形成する。"
+ NEW_ACHIEVEMENT_7_27_DESC:2 "Start as Ardabil and form Persia or Eranshahr."
  NEW_ACHIEVEMENT_7_28_NAME:0 "賽よ頼む、死んでくだサイ"
  NEW_ACHIEVEMENT_7_28_DESC:0 "3つの能力が全て1以下で満70歳の統治者を得る。"
  NEW_ACHIEVEMENT_7_29_NAME:0 "三位一体"
@@ -233,7 +233,7 @@
  NEW_ACHIEVEMENT_8_23_NAME:0 "封鎖者"
  NEW_ACHIEVEMENT_8_23_DESC:0 "とある敵国の港を10以上封鎖する。"
  NEW_ACHIEVEMENT_8_24_NAME:0 "これがペルシアだ！"
- NEW_ACHIEVEMENT_8_24_DESC:0 "ペルシアを形成し、エジプト、アナトリア、ギリシャを中核州として領有する。"
+ NEW_ACHIEVEMENT_8_24_DESC:1 "Form Persia or Eranshahr, and own Egypt, Anatolia and Greece as core provinces."
  NEW_ACHIEVEMENT_8_25_NAME:0 "切支丹日本"
  NEW_ACHIEVEMENT_8_25_DESC:0 "日本の大名として開始し、自国含む日本全土をキリスト教に改宗する。"
  NEW_ACHIEVEMENT_8_26_NAME:0 "ヘッセンの傭兵"
