--- a/source/localisation/branching_mission_system_l_english.yml
+++ b/source/localisation/branching_mission_system_l_english.yml
@@ -1,105 +1,105 @@
 ﻿l_english:
- select_current_branch_batch_1_missions_title:0 "§YSelect Current Mission Branch:§! §O[Root.GetCurrentSelectedMissionBranchBatch1]§!"
- select_current_branch_batch_2_missions_title:0 "§YSelect Current Mission Branch:§! §O[Root.GetCurrentSelectedMissionBranchBatch2]§!"
- select_current_branch_batch_3_missions_title:0 "§YSelect Current Mission Branch:§! §O[Root.GetCurrentSelectedMissionBranchBatch3]§!"
- preview_branch_batch_1_missions_1_title:0 "§YPreview Mission Branch: §O1§!§!"
- preview_branch_batch_1_missions_2_title:0 "§YPreview Mission Branch: §O2§!§!"
- preview_branch_batch_1_missions_3_title:0 "§YPreview Mission Branch: §O3§!§!"
- preview_branch_batch_1_missions_4_title:0 "§YPreview Mission Branch: §O4§!§!"
- preview_branch_batch_1_missions_5_title:0 "§YPreview Mission Branch: §O5§!§!"
- preview_branch_batch_1_missions_6_title:0 "§YPreview Mission Branch: §O6§!§!"
- preview_branch_batch_1_missions_7_title:0 "§YPreview Mission Branch: §O7§!§!"
- preview_branch_batch_1_missions_8_title:0 "§YPreview Mission Branch: §O8§!§!"
- preview_branch_batch_1_missions_9_title:0 "§YPreview Mission Branch: §O9§!§!"
- preview_branch_batch_1_missions_10_title:0 "§YPreview Mission Branch: §O10§!§!"
- preview_branch_batch_2_missions_1_title:0 "§YPreview Mission Branch: §O1§!§!"
- preview_branch_batch_2_missions_2_title:0 "§YPreview Mission Branch: §O2§!§!"
- preview_branch_batch_2_missions_3_title:0 "§YPreview Mission Branch: §O3§!§!"
- preview_branch_batch_2_missions_4_title:0 "§YPreview Mission Branch: §O4§!§!"
- preview_branch_batch_2_missions_5_title:0 "§YPreview Mission Branch: §O5§!§!"
- preview_branch_batch_2_missions_6_title:0 "§YPreview Mission Branch: §O6§!§!"
- preview_branch_batch_2_missions_7_title:0 "§YPreview Mission Branch: §O7§!§!"
- preview_branch_batch_2_missions_8_title:0 "§YPreview Mission Branch: §O8§!§!"
- preview_branch_batch_2_missions_9_title:0 "§YPreview Mission Branch: §O9§!§!"
- preview_branch_batch_2_missions_10_title:0 "§YPreview Mission Branch: §O10§!§!"
- preview_branch_batch_3_missions_1_title:0 "§YPreview Mission Branch: §O1§!§!"
- preview_branch_batch_3_missions_2_title:0 "§YPreview Mission Branch: §O2§!§!"
- preview_branch_batch_3_missions_3_title:0 "§YPreview Mission Branch: §O3§!§!"
- preview_branch_batch_3_missions_4_title:0 "§YPreview Mission Branch: §O4§!§!"
- preview_branch_batch_3_missions_5_title:0 "§YPreview Mission Branch: §O5§!§!"
- preview_branch_batch_3_missions_6_title:0 "§YPreview Mission Branch: §O6§!§!"
- preview_branch_batch_3_missions_7_title:0 "§YPreview Mission Branch: §O7§!§!"
- preview_branch_batch_3_missions_8_title:0 "§YPreview Mission Branch: §O8§!§!"
- preview_branch_batch_3_missions_9_title:0 "§YPreview Mission Branch: §O9§!§!"
- preview_branch_batch_3_missions_10_title:0 "§YPreview Mission Branch: §O10§!§!"
- NO_MISSIONS_SELECTED:0 "No Path Selected"
+ select_current_branch_batch_1_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch1]§!"
+ select_current_branch_batch_2_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch2]§!"
+ select_current_branch_batch_3_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch3]§!"
+ preview_branch_batch_1_missions_1_title:0 "§Yミッションツリープレビュー：§O1§!§!"
+ preview_branch_batch_1_missions_2_title:0 "§Yミッションツリープレビュー：§O2§!§!"
+ preview_branch_batch_1_missions_3_title:0 "§Yミッションツリープレビュー：§O3§!§!"
+ preview_branch_batch_1_missions_4_title:0 "§Yミッションツリープレビュー：§O4§!§!"
+ preview_branch_batch_1_missions_5_title:0 "§Yミッションツリープレビュー：§O5§!§!"
+ preview_branch_batch_1_missions_6_title:0 "§Yミッションツリープレビュー：§O6§!§!"
+ preview_branch_batch_1_missions_7_title:0 "§Yミッションツリープレビュー：§O7§!§!"
+ preview_branch_batch_1_missions_8_title:0 "§Yミッションツリープレビュー：§O8§!§!"
+ preview_branch_batch_1_missions_9_title:0 "§Yミッションツリープレビュー：§O9§!§!"
+ preview_branch_batch_1_missions_10_title:0 "§Yミッションツリープレビュー：§O10§!§!"
+ preview_branch_batch_2_missions_1_title:0 "§Yミッションツリープレビュー：§O1§!§!"
+ preview_branch_batch_2_missions_2_title:0 "§Yミッションツリープレビュー：§O2§!§!"
+ preview_branch_batch_2_missions_3_title:0 "§Yミッションツリープレビュー：§O3§!§!"
+ preview_branch_batch_2_missions_4_title:0 "§Yミッションツリープレビュー：§O4§!§!"
+ preview_branch_batch_2_missions_5_title:0 "§Yミッションツリープレビュー：§O5§!§!"
+ preview_branch_batch_2_missions_6_title:0 "§Yミッションツリープレビュー：§O6§!§!"
+ preview_branch_batch_2_missions_7_title:0 "§Yミッションツリープレビュー：§O7§!§!"
+ preview_branch_batch_2_missions_8_title:0 "§Yミッションツリープレビュー：§O8§!§!"
+ preview_branch_batch_2_missions_9_title:0 "§Yミッションツリープレビュー：§O9§!§!"
+ preview_branch_batch_2_missions_10_title:0 "§Yミッションツリープレビュー：§O10§!§!"
+ preview_branch_batch_3_missions_1_title:0 "§Yミッションツリープレビュー：§O1§!§!"
+ preview_branch_batch_3_missions_2_title:0 "§Yミッションツリープレビュー：§O2§!§!"
+ preview_branch_batch_3_missions_3_title:0 "§Yミッションツリープレビュー：§O3§!§!"
+ preview_branch_batch_3_missions_4_title:0 "§Yミッションツリープレビュー：§O4§!§!"
+ preview_branch_batch_3_missions_5_title:0 "§Yミッションツリープレビュー：§O5§!§!"
+ preview_branch_batch_3_missions_6_title:0 "§Yミッションツリープレビュー：§O6§!§!"
+ preview_branch_batch_3_missions_7_title:0 "§Yミッションツリープレビュー：§O7§!§!"
+ preview_branch_batch_3_missions_8_title:0 "§Yミッションツリープレビュー：§O8§!§!"
+ preview_branch_batch_3_missions_9_title:0 "§Yミッションツリープレビュー：§O9§!§!"
+ preview_branch_batch_3_missions_10_title:0 "§Yミッションツリープレビュー：§O10§!§!"
+ NO_MISSIONS_SELECTED:0 "ルート未選択"
  PREVIEW_COLOR:0 "§O"
  COLOR_END:0 "§!"
  NORMAL_COLOR:0 "§W"
- BYZ_unlock_branches_decision:1 "Reveal the '§YPreview Branching Missions§!' buttons, allowing us to preview and select the follow-up missions."
- BYZ_end_preview:1 "End the §OPreview§!. The currently selected mission tree will be chosen."
- mal_decide_for_conversion:0 "Conversion Path"
- mal_decide_for_tolerance:0 "Tolerance Path"
- son_islamic_focus:0 "Islamic Path"
- son_tolerance_focus:0 "Tolerance Path"
- kon_picked_fetishism:0 "Fetishism Path"
- kon_picked_side_with_europeans:0 "Christian Path"
- sca_unlock_catholic_missions:0 "Catholic Path"
- sca_unlock_protestant_missions:0 "Reformation Path"
- sca_unlock_humanist_missions:0 "Humanist Path"
- sca_unlock_norse_missions:0 "Norse Path"
- pol_chose_pu_flag:0 "Commonwealth Path"
+ BYZ_unlock_branches_decision:1 "「§Yミッション分岐プレビュー§!」ボタンが登場し、追いかけていくミッションをプレビュー表示し、選択できます。"
+ BYZ_end_preview:1 "§Oプレビュー§!を終わります。現在選んでいるミッションが選択されます。"
+ mal_decide_for_conversion:0 "改宗ルート"
+ mal_decide_for_tolerance:0 "寛容ルート"
+ son_islamic_focus:0 "イスラム教ルート"
+ son_tolerance_focus:0 "寛容ルート"
+ kon_picked_fetishism:0 "呪物崇拝ルート"
+ kon_picked_side_with_europeans:0 "キリスト教ルート"
+ sca_unlock_catholic_missions:0 "カトリックルート"
+ sca_unlock_protestant_missions:0 "改革派ルート"
+ sca_unlock_humanist_missions:0 "人文主義ルート"
+ sca_unlock_norse_missions:0 "ノルスルート"
+ pol_chose_pu_flag:0 "コモンウェルスルート"
  pol_denied_pu_flag:0 "Holy Roman Imperial Path"
- tur_chose_legalism:0 "Legalism Path"
- tur_chose_mysticism:0 "Mysticism Path"
- tur_non_muslim_path_flag:0 "Non-Muslim Path"
- eng_took_gbr_branch:0 "British Path"
- eng_took_ave_branch:0 "Angevin Path"
- mng_dynamic_1:0 "Improved Haijin Path"
- mng_dynamic_2:0 "Repealed Haijin Path"
- qng_open_ports_flag:0 "Open Ports Path"
- qng_close_ports_flag:0 "Closed Ports Path"
- fra_chose_to_piss_off_pope_flag:0 "Italian Wars Path"
- fra_papal_lap_dop_flag:0 "Crusader Kings Path"
+ tur_chose_legalism:0 "律法主義ルート"
+ tur_chose_mysticism:0 "神秘主義ルート"
+ tur_non_muslim_path_flag:0 "非ムスリムルート"
+ eng_took_gbr_branch:0 "イギリスルート"
+ eng_took_ave_branch:0 "アンジュールート"
+ mng_dynamic_1:0 "海禁改良ルート"
+ mng_dynamic_2:0 "海禁廃止ルート"
+ qng_open_ports_flag:0 "開港ルート"
+ qng_close_ports_flag:0 "鎖港ルート"
+ fra_chose_to_piss_off_pope_flag:0 "イタリア戦争ルート"
+ fra_papal_lap_dop_flag:0 "クルセイダーキングスルート"
  fra_shed_the_blood_of_the_saxon_man_flag:0 "Holy Roman Imperial Path"
  fra_fufujoni_flag:0 "Eastern Conquest Path"
- jap_mushashi_5_books_flag:0 "Land Military Path"
- jap_domineering_naval_focus_flag:0 "Naval Military Path"
- christianity_defeated_flag:0 "Shinto Path"
- a_kirishitan_realm:0 "Christian Path"
- BYZ_centralized:0 "Centralized Path"
- per_shia_missions:0 "Shia Path"
- BYZ_decentralized:0 "Decentralized Path"
- per_sunni_missions:0 "Sunni Path"
- per_zoroastrian_missions:0 "Zoroastrian Path"
- MAL_preview_conversion:0 "Preview the '§OConversion Path§!' Mission Tree."
- SON_preview_islamic:0 "Preview the '§OConversion Path§!' Mission Tree."
- KON_preview_fetishism:0 "Preview the '§OFetishism Path§!' Mission Tree."
- MAL_preview_tolerance:0 "Preview the '§OTolerance Path§!' Mission Tree."
- SON_preview_tolerance:0 "Preview the '§OTolerance Path§!' Mission Tree."
- KON_preview_christian:0 "Preview the '§OChristian Path§!' Mission Tree."
- SCA_preview_catholic:0 "Preview the '§OCatholic Path§!' Mission Tree."
- SCA_preview_protestant:0 "Preview the '§OReformation Path§!' Mission Tree."
- SCA_preview_humanist:0 "Preview the '§OHumanist Path§!' Mission Tree."
- SCA_preview_norse:0 "Preview the '§ONorse Path§!' Mission Tree."
- POL_preview_lith:0 "Preview the '§OCommonwealth Path§!' Mission Tree."
+ jap_mushashi_5_books_flag:0 "陸軍ルート"
+ jap_domineering_naval_focus_flag:0 "海軍ルート"
+ christianity_defeated_flag:0 "神道ルート"
+ a_kirishitan_realm:0 "キリスト教ルート"
+ BYZ_centralized:0 "集権化ルート"
+ per_shia_missions:0 "シーア派ルート"
+ BYZ_decentralized:0 "分権化ルート"
+ per_sunni_missions:0 "スンナ派ルート"
+ per_zoroastrian_missions:0 "ゾロアスター教ルート"
+ MAL_preview_conversion:0 "「§O改宗ルート§!」ミッションツリーをプレビュー表示します。"
+ SON_preview_islamic:0 "「§O改宗ルート§!」ミッションツリーをプレビュー表示します。"
+ KON_preview_fetishism:0 "「§O呪物崇拝ルート§!」ミッションツリーをプレビュー表示します。"
+ MAL_preview_tolerance:0 "「§O寛容ルート§!」ミッションツリーをプレビュー表示します。"
+ SON_preview_tolerance:0 "「§O寛容ルート§!」ミッションツリーをプレビュー表示します。"
+ KON_preview_christian:0 "「§Oキリスト教ルート§!」ミッションツリーをプレビュー表示します。"
+ SCA_preview_catholic:0 "「§Oカトリックルート§!」ミッションツリーをプレビュー表示します。"
+ SCA_preview_protestant:0 "「§O改革派ルート§!」ミッションツリーをプレビュー表示します。"
+ SCA_preview_humanist:0 "「§O人文主義ルート§!」ミッションツリーをプレビュー表示します。"
+ SCA_preview_norse:0 "「§Oノルスルート§!」ミッションツリーをプレビュー表示します。"
+ POL_preview_lith:0 "「§Oコモンウェルスルート§!」ミッションツリーをプレビュー表示します。"
  POL_preview_hre:0 "Preview the '§OHoly Roman Imperial Path§!' Mission Tree."
- TUR_preview_legalism:0 "Preview the '§OLegalism Path§!' Mission Tree."
- TUR_preview_mysticism:0 "Preview the '§OMysticism Path§!' Mission Tree."
- TUR_preview_non_muslim_path:0 "Preview the '§ONon-Muslim Path§!' Mission Tree."
- ENG_preview_gbr_branch:0 "Preview the '§OBritish Path§!' Mission Tree."
- ENG_preview_ave_branch:0 "Preview the '§OAngevin Path§!' Mission Tree."
- MNG_preview_improve_haijin:0 "Preview the '§OImproved Haijin Path§!' Mission Tree."
- MNG_preview_repeal_haijin:0 "Preview the '§ORepealed Haijin Path§!' Mission Tree."
- QNG_preview_open_ports:0 "Preview the '§OOpen Ports Path§!' Mission Tree."
- QNG_preview_close_ports:0 "Preview the '§OClosed Ports Path§!' Mission Tree."
- FRA_preview_italian_wars:0 "Preview the '§OItalian Wars Path§!' Mission Tree."
- FRA_preview_crusader_kings:0 "Preview the '§OCrusader Kings Path§!' Mission Tree."
+ TUR_preview_legalism:0 "「§O律法主義ルート§!」ミッションツリーをプレビュー表示します。"
+ TUR_preview_mysticism:0 "「§O神秘主義ルート§!」ミッションツリーをプレビュー表示します。"
+ TUR_preview_non_muslim_path:0 "「§O非ムスリムルート§!」ミッションツリーをプレビュー表示します。"
+ ENG_preview_gbr_branch:0 "「§Oイギリスルート§!」ミッションツリーをプレビュー表示します。"
+ ENG_preview_ave_branch:0 "「§Oアンジュールート§!」ミッションツリーをプレビュー表示します。"
+ MNG_preview_improve_haijin:0 "「§O海禁改良ルート§!」ミッションツリーをプレビュー表示します。"
+ MNG_preview_repeal_haijin:0 "「§O海禁廃止ルート§!」ミッションツリーをプレビュー表示します。"
+ QNG_preview_open_ports:0 "「§O開港ルート§!」ミッションツリーをプレビュー表示します。"
+ QNG_preview_close_ports:0 "「§O鎖港ルート§!」ミッションツリーをプレビュー表示します。"
+ FRA_preview_italian_wars:0 "「§Oイタリア戦争ルート§!」ミッションツリーをプレビュー表示します。"
+ FRA_preview_crusader_kings:0 "「§Oクルセイダーキングスルート§!」ミッションツリーをプレビュー表示します。"
  FRA_preview_charlemagnes_legacy:0 "Preview the '§OHoly Roman Imperial Path§!' Mission Tree."
  FRA_preview_kill_hre:0 "Preview the '§OEastern Conquest Path§!' Mission Tree."
- JAP_preview_mushashi_5_books:0 "Preview the '§OLand Military Path§!' Mission Tree."
- JAP_preview_domineering_naval_focus:0 "Preview the '§ONaval Military Path§!' Mission Tree."
- JAP_preview_christianity_defeated:0 "Preview the '§OShinto Path§!' Mission Tree."
- JAP_preview_a_kirishitan_realm:0 "Preview the '§OChristian Path§!' Mission Tree."
- BYZ_preview_decentralized:1 "Preview the '§ODecentralized§!' Mission Tree."
- BYZ_preview_centralized:1 "Preview the '§OCentralized§!' Mission Tree."
+ JAP_preview_mushashi_5_books:0 "「§O陸軍ルート§!」ミッションツリーをプレビュー表示します。"
+ JAP_preview_domineering_naval_focus:0 "「§O海軍ルート§!」ミッションツリーをプレビュー表示します。"
+ JAP_preview_christianity_defeated:0 "「§O神道ルート§!」ミッションツリーをプレビュー表示します。"
+ JAP_preview_a_kirishitan_realm:0 "「§Oキリスト教ルート§!」ミッションツリーをプレビュー表示します。"
+ BYZ_preview_decentralized:1 "「§O分権化ルート§!」ミッションツリーをプレビュー表示します。"
+ BYZ_preview_centralized:1 "「§O集権化ルート§!」ミッションツリーをプレビュー表示します。"
