--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -5058,4 +5058,4 @@
  flavor_teu.3.b:0 "プロイセン人は我が支配の下で奉仕するだろう。"
  flavor_tur.3375.a.tt:0 "すべての領有州で自治率§G-10.00%§!"
  flavor_ara.EVTOPTC6:0 "貴族を倒せ！"
- every_colonial_subject_gains_tt:0 "\nAll our §YColonial§! subjects will receive the following:"
+ every_colonial_subject_gains_tt:0 "\nすべての§Y植民地§!従属国が以下を受けます："
