Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -381,7 +381,7 @@
  NO_EDICT_IN_TERRITORY:0 "$NAME$はテリトリーです。布告は出せません。"
  CONFIRSTATEEDICT_TEXT_N:0 "現在の布告を廃止します、よろしいですか？"
  MODIFIER_LOCAL_MONTHLY_DEVASTATION:0 "月間荒廃度"
- edict_religious_unity:0 "宗教的統一の強制布告"
+ edict_religious_unity:0 "宗教統一の強制"
  edict_protect_trade:0 "保護交易布告"
  edict_promote_military_recruitment:1 "募兵推進布告"
  edict_encourage_development:0 "開発奨励布告"
@@ -558,7 +558,7 @@
  LEDGER_PLAYER:0 "プレイヤー"
  recovery_motivation:0 "報復主義"
  NO_REVANCHISM_IRO:0 "報復主義はありません。"
- REVANCHISM_IRO:0 "§Y報復主義§!\n$NAME$は現在、報復主義を経験しており、これにより以下の効果を与えます：\n$EFF$"
+ REVANCHISM_IRO:0 "§Y報復主義§!\n$NAME$は現在、報復主義を経験しており、これにより以下の効果が与えられます：\n$EFF$"
  non_core:0 "中核州ではありません"
  OCCUPATION_OF:0 "の占領"
  NO_FORT_WILL_FALL_AFTER_N_DAYS:0 "$NAME|Y$を保護している要塞はなく、したがって$DATE|Y$には完全に占領されるでしょう。"
@@ -2709,10 +2709,10 @@
  COLONIST_TRAVELING:0 "$COUNTRY|Y$からの植民者$NAME$が$PROVINCE$に向かっています。"
  COLONY_TRADE:0 "交易力：$POWER|1$\n交易額：$VALUE|2$\n交易ノード：$NODE$"
  COLONY_PROGRESS:1 "現在、ここには$SETTLERS$人の入植者がいます。都市を作成するには$MAX$人が必要です。"
- IS_ENEMY1:0 "表示"
- IS_ENEMY2:0 "敵として。"
- IS_NOT_ENEMY1:0 "表示しない"
- IS_NOT_ENEMY2:0 "敵として。"
+ IS_ENEMY1:0 ""
+ IS_ENEMY2:0 "を敵と見做している。"
+ IS_NOT_ENEMY1:0 ""
+ IS_NOT_ENEMY2:0 "敵として見做していない。"
  TERRAIN_COMBAT_WIDTH:0 "戦闘幅：$VAL$\n"
  COMBAT_WIDTH:0 "戦闘幅"
  COMBAT_WIDTH_INCREASE:0 "戦闘幅が§G$VALUE$§W増加します。\n"
@@ -4380,9 +4380,9 @@
  SHOW_SUBJECT_REVOLTS:0 "従属国内の反乱軍を見る"
  SHOW_SUBJECT_REVOLTS_DESC:0 "これを有効にすると従属国内での反乱軍も見ることができます。"
  SUBJECT_REVOLT_DESC:0 "これらは従属国内の反乱軍であり、我々が交渉することはできません。"
- NOT_CANCEL_POLICY_UNTIL:0 "政策は少なくとも§Y$YEARS$§!年は制定していなければなりません。この政策は§Y$DATE$§!になると廃止できるようになります。\n"
- CONFIRMCANCELPOLICY:0 "政策の廃止"
- CONFIRMCANCELPOLICY_TEXT:0 "本当に§Y$NAME$§!を廃止しますか？"
+ NOT_CANCEL_POLICY_UNTIL:0 "政策は少なくとも§Y$YEARS$§!年は制定していなければなりません。この政策は§Y$DATE$§!になると撤廃できるようになります。\n"
+ CONFIRMCANCELPOLICY:0 "政策の撤廃"
+ CONFIRMCANCELPOLICY_TEXT:0 "本当に§Y$NAME$§!を撤廃しますか？"
  CONFIRMADDPOLICY:0 "政策を制定"
  OTHER_NO_ACTIVE_POLICIES:0 "彼らには現在有効な政策がありません。"
  OTHER_CURR_ACTIVE_POLICIES:0 "有効な政策"
@@ -4856,11 +4856,11 @@
  grant_consessions_to_the_jains:0 "ジャイナ教徒に譲歩"
  grant_consessions_to_the_marathas:0 "マラーターに譲歩"
  grant_consessions_to_the_rajputs:0 "ラージプートに譲歩"
- combat_janissary_decadence:0 "イェニチェリ軍団の衰退"
+ combat_janissary_decadence:0 "イェニチェリの退廃との闘争"
  issue_investigate_corruption:0 "汚職の調査"
  appoint_a_grand_admiral:0 "大提督の任命"
- expand_officer_lists:0 "指揮官リストを拡大する"
- appoint_a_new_prime_minister:0 "新たな首相の任命"
+ expand_officer_lists:0 "指揮官リストの拡大"
+ appoint_a_new_prime_minister:0 "新首相の任命"
  establish_new_siberian_frontier:0 "シベリア開拓の拡張"
  the_draft:0 "徴兵"
  emergency_impressment_act:0 "緊急徴兵法"
