--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -61,32 +61,32 @@
  desc_fra_rightful_emperor_of_italy_modifier:1 "イタリアを神聖ローマ帝国の保護下に戻そうとした自国の努力は、大きな成果を上げた。"
  desc_fra_franco_iberian_cooperation_modifier:1 "イベリア半島の同胞との緊密な結びつきは、両大国を威信と果てしない栄光への地位に押し出す推進力だ。"
  desc_fra_light_of_catholicism_modifier:1 "教皇庁内における自国の地位は信じられないほどの強行への影響力を与えている。"
- desc_fra_colonial_rush_modifier:1 "The New World is real! Our men rush to colonize and tame this new foreign land which promises great wealth."
- desc_fra_hudson_bay_fur_modifier:1 "The furs deriving from the colder parts of the New World are of great quality."
- desc_fra_french_bombards_modifier:1 "Our siege weapons will tear down any and all resistance in our struggle to liberate our land and protect our folk."
- desc_fra_proper_legal_systems_modifier:1 "A nation as expansive and wealthy as ours demands a proper and healthy set of legal systems."
- desc_fra_napoleonic_warfare_modifier:1 "Quick deployment, manuevers and supreme firepower are a few of the characteristics of warfare in our time."
- desc_fra_subjugation_of_the_germans_modifier:1 "Our foes now lie securely under our heel, their administrations incorporated firmly within our own."
- desc_fra_french_supremacy_modifier:1 "The French flag towers above all other European powers, none shall question our might."
- desc_fra_church_and_state_harmony_modifier:1 "Our administration goes hand-in-hand with the clergy of our country, working together in a harmoniously symbiotic relationship."
- desc_fra_popularization_of_secular_beliefs_modifier:1 "The popularization of secular beliefs has a tight grip on our society."
- desc_center_mil_matters_strategy_modifier:1 "This location is the nerve center of our military efforts, producing capable generals and sending out logistical orders across our nation."
- desc_fra_iron_crowned_modifier:1 "Our ruler is undisputed in our domination over our foes."
- desc_fra_venetian_craftsmanship_modifier:1 "The expertise of the Venetian shipwrights will serve the French royal court."
- desc_fra_roi_palace_triggered_modifier:1 "The French royal summer residence in Venice is adorned with a magnificent palace, marbe and displays of art in a great exhibition of power, control and royal accord."
- desc_fra_roi_palace_modifier:1 "The French royal summer residence in Venice is adorned with a magnificent palace, marbe and displays of art in a great exhibition of power, control and royal accord."
+ desc_fra_colonial_rush_modifier:1 "新世界は実在する！国民たちは、巨万の富が約束されたこの新しい異国の地に入植、支配しようと殺到している。"
+ desc_fra_hudson_bay_fur_modifier:1 "新世界の寒冷地域から産出される毛皮は素晴らしい品質である。"
+ desc_fra_french_bombards_modifier:1 "自国の攻城兵器は、自領の解放や自民族を守る戦いにおいて、どんな抵抗をも打ち壊すだろう。"
+ desc_fra_proper_legal_systems_modifier:1 "自国のように広大で裕福な国家には、適切で健全な法制度が必要だ。"
+ desc_fra_napoleonic_warfare_modifier:1 "迅速な配置、機動力、強力な火力は、現代戦の特徴の一つだ。"
+ desc_fra_subjugation_of_the_germans_modifier:1 "敵は現在自身の支配下にしっかりとあり、彼らの政権は国内にしっかり組み込まれている。"
+ desc_fra_french_supremacy_modifier:1 "フランス国旗が他全ヨーロッパ勢力の上にそびえ立っており、自国の力に疑問を持つ者などどこにもいないのだ。"
+ desc_fra_church_and_state_harmony_modifier:1 "自政権は、国内の聖職者と手を取り合い、調和のとれた共生関係を築いている。"
+ desc_fra_popularization_of_secular_beliefs_modifier:1 "世俗信仰の大衆化は、自国の社会を強く支配している。"
+ desc_center_mil_matters_strategy_modifier:1 "この場所は、有能な将軍を輩出し、全国に後方支援を送り出す、軍事活動の中枢である。"
+ desc_fra_iron_crowned_modifier:1 "自国の統治者は敵に対する支配について議論の余地がない。"
+ desc_fra_venetian_craftsmanship_modifier:1 "ヴェネツィアの船大工の専門知識は、フランス王室に役立つだろう。"
+ desc_fra_roi_palace_triggered_modifier:1 "ヴェネツィアにあるフランス王室の夏の離宮は、荘厳な宮殿、大理石、芸術品で飾られ、権力、支配力、王家の調和が見事に表現されている。"
+ desc_fra_roi_palace_modifier:1 "ヴェネツィアにあるフランス王室の夏の離宮は、荘厳な宮殿、大理石、芸術品で飾られ、権力、支配力、王家の調和が見事に表現されている。"
  desc_fra_coronated_by_the_pope_modifier:1 "自国の支配者は、教皇によって戴冠を受けており、正当性と威信に恵まれている。"
- desc_fra_golden_march_modifier:1 "Italy rightfully belongs to the French crown!"
- desc_fra_golden_march2_modifier:1 "Italy rightfully belongs to the French crown!"
- desc_fra_french_cloth_centers_modifier:1 "The cloth centers within our realm are famed for the quality of their fabrics as well as their production volumes."
- desc_fra_channel_dominance_modifier:1 "Our dominance of the Channel has yielded tremendous monetary bonuses and has served as a stepping stone to improving our maritime presence."
+ desc_fra_golden_march_modifier:1 "イタリアは正当にフランス王家のものだ！"
+ desc_fra_golden_march2_modifier:1 "イタリアは正当にフランス王家のものだ！"
+ desc_fra_french_cloth_centers_modifier:1 "自領内の布地施設は、その生地の品質と生産量で有名である。"
+ desc_fra_channel_dominance_modifier:1 "イギリス海峡の支配は莫大な金銭の特別配当をもたらし、海上における存在感を向上させる足がかりとしての役割を果たした。"
  desc_fra_letat_cest_moi_modifier:1 "朕は国家なり！"
  desc_fra_absolutism_modifier:1 "朕は国家なり！"
- desc_fra_french_industrial_revolution_modifier:1 "Our grasp of the Industrial revolution has pushed our great nation to the forefront of technological advances and factory production techniques."
- desc_fra_canal_royal_en_languedoc_modifier:1 "This province is part of an intricate set of waterways and thus enjoys major mercantile boons."
- desc_fra_metal_barons_modifier:1 "This province is operated by local interests, aimed at improving production and efficiency."
- desc_fra_riches_of_italy_modifier:1 "The riches of Italy shall serve us in our struggle to realize our ambitions."
- desc_fra_stable_currency_modifier:1 "The instability during the revolution has been quelled by the introduction of a stable currency."
+ desc_fra_french_industrial_revolution_modifier:1 "産業革命を掌握したことにより、我が大国は技術進歩と工場生産技術の最先端に躍り出た。"
+ desc_fra_canal_royal_en_languedoc_modifier:1 "この州は複雑に入り組んだ水路の一部であるため、大きな商業的恩恵を享受している。"
+ desc_fra_metal_barons_modifier:1 "この州は現地の利害関係者によって運営されており、生産と効率の改善を目指している。"
+ desc_fra_riches_of_italy_modifier:1 "イタリアの富は我が大望を実現する苦闘の中で役に立つことだろう。"
+ desc_fra_stable_currency_modifier:1 "革命中の不安定さは、安定通貨の導入によって鎮まった。"
  desc_fra_code_napoleon_modifier:1 "The Napoleonic Code aims at improving internal infrastructure and improving the living conditions of our folk."
  desc_fra_strong_familial_ties_modifier:1 "The strong ties between us and our subjects will help in demanding more assistance from them while enforcing unbreakable compliance."
  desc_fra_kingdom_sea_modifier:1 "Our conquest of Naples in combination with our mercantile efforts have greatly paid off!"
@@ -99,7 +99,7 @@
  desc_fra_first_opera_house_modifier:1 "The dawn of the opera, as an ode to power and a vehicle to legitimize royal power is a powerful instrument for the monarch and a great source of culture and entertainment for the masses."
  desc_fra_catholic_italy_modifier:1 "Catholicism is Italy's most vibrant religion. Under our protection, it will thrive and prosper!"
  desc_fra_suzerainty_italy_modifier:1 "Subjugating the domain of Italy is a pathway to many abilities some consider to be... unnatural."
- desc_fra_golden_march3_modifier:1 "Italy rightfully belongs to the French crown!"
+ desc_fra_golden_march3_modifier:1 "イタリアは正当にフランス王家のものだ！"
  desc_fra_leonardo_workshop_modifier:1 "This location hosts the workshop of one of Renaissance's most famed figures, Leonardo da Vinci."
  desc_fra_centralized_commerce_modifier:1 "The centralization of our commercial efforts will only lead to the erection of stronger centers of trade."
  desc_fra_cabinet_reforms_modifier:1 "Reforming our cabinet has led to a resurgence of the appetite for political reform and the speeding up of integration efforts across our nation."
