--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1736,7 +1736,7 @@
  gyeongbok_palace:0 "景福宮"
  hampi:0 "ハンピ"
  prague:0 "プラハの歴史地区"
- holy_city_kairouan:0 "聖地ケルアン"
+ holy_city_kairouan:0 "聖都ケルアン"
  imam_hussein_al-abbas:0 "フセインとアル＝アッバースの聖廟"
  kashi_vishwanath:0 "カーシー・ヴィシュヴァナート寺院"
  khajuraho:0 "カジュラーホー"
