--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -658,8 +658,8 @@
  estate_church_heir_shrine_desc:0 "通常、カルトは[Root.Monarch.GetTitle]の問題であり、後継者の問題ではない。しかし、これは神殿を建造することで変えることができる。その神殿は後継者に宗教的な避難所としての役目を果たし、特定のカルトに自身の信仰を表現することを可能とする。"
  estate_burghers_hydraulic_rights:0 "水理権"
  estate_burghers_hydraulic_rights_desc:0 "水の分配は遠隔地の僻地の村々がいつも心配している事案だ。[Root.GetBurghersName]が水利権をより直接支配できるようにすることで、公平で効率的な水の分配が保証できる。"
- estate_burghers_enslaving_rights_gt:0 "領有州の内、地形タイプが§Y砂漠§!、§Y沿岸砂漠§!、§Yステップ§!および§Yサバンナ§!の州の開発コストを§G50.0%§!減少させます。"
- estate_burghers_enslaving_rights_rt:0 "開発コスト減少が、地形タイプが§Y砂漠§!、§Y沿岸砂漠§!、§Yステップ§!および§Yサバンナ§!の領有州すべてから取り除かれます。"
+ estate_burghers_enslaving_rights_gt:0 "領有州の内、地形タイプが§Y砂漠§!・§Y沿岸砂漠§!・§Yステップ§!・§Yサバンナ§!の州の開発コストを§G50.0%§!減少させます。"
+ estate_burghers_enslaving_rights_rt:0 "開発コスト減少が、地形タイプが§Y砂漠§!・§Y沿岸砂漠§!・§Yステップ§!・§Yサバンナ§!の領有州すべてから取り除かれます。"
  estate_nobles_cawa_peace_keepers:1 "チェワ平和維持軍の任命"
  estate_nobles_cawa_peace_keepers_desc:0 "チェワはエチオピアの精鋭部隊であり、貴族の戦士階級である。彼らにある種の特権を与えることで、彼らがその技能を用いて末端の地方の平和維持ができるようになる。"
  estate_nobles_cawa_offensive_fighters:0 "チェワ征服軍の任命"
