--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -699,8 +699,8 @@
  desc_estate_burghers_forest_expansion_woods:0 "この国の市民や農民は政府から資源を得たので、困難な林の薮へと進出できる。"
  estate_burghers_mountain_expansion:0 "山地への拡張"
  estate_burghers_mountain_expansion_desc:0 "市民も農民も、山地や高知といった荒れた地形に適応しているため、我が[Root.GovernmentName]から最も人里離れた人が居住していない山地にさえ、立派な町を建設することができる。彼らにもっと特権を与えることで、その資源を自国の最善のために使用できる。"
- estate_burghers_mountain_expansion_gt:1 "領有州の内、地形タイプが§Y山岳§!、§Y高地§!および§Y丘陵§!の州の開発コストペナルティを§G50.0%§!削減させます。"
- estate_burghers_mountain_expansion_rt:0 "開発コスト減少が、地形タイプが§Y山岳§!、§Y高地§!および§Y丘陵§!の領有州すべてから取り除かれます。"
+ estate_burghers_mountain_expansion_gt:1 "領有州の内、地形タイプが§Y山岳§!・§Y高地§!・§Y丘陵§!の州の開発コストペナルティを§G50.0%§!削減させます。"
+ estate_burghers_mountain_expansion_rt:0 "開発コスト減少が、地形タイプが§Y山岳§!・§Y高地§!・§Y丘陵§!の領有州すべてから取り除かれます。"
  estate_burghers_mountain_expansion_mountains:0 "山岳への拡張"
  desc_estate_burghers_mountain_expansion_mountains:0 "この国の市民や農民は政府から資源を得たので、困難な山岳地形へと進出できる。"
  estate_burghers_mountain_expansion_highlands:0 "高地への拡張"
@@ -3563,7 +3563,7 @@
  abandon_the_legal_ways_title:0 "律法主義の放棄"
  abandon_the_legal_ways_desc:0 "立法主義のウラマーが唱える厳格な教えや法律は、政府の組織においてほぼ役立たずであることが証明された。敬虔な臣民にとってはショックを受けることかもしれないが、もはや立法主義の規範を捨てるべき時であろう。"
  return_to_the_legal_ways_title:0 "律法主義の受容"
- return_to_the_legal_ways_desc:0 "コーランの自由な解釈は、国家のためにその役割を果たしてきた。敬虔な臣民にとってはショックを受けることかもしれないが、もはや立法主義の規範を受け入れるべき時であろう。"
+ return_to_the_legal_ways_desc:0 "クルアーンの自由な解釈は、国家のためにその役割を果たしてきた。敬虔な臣民にとってはショックを受けることかもしれないが、もはや立法主義の規範を受け入れるべき時であろう。"
  mechanic_allow_piety_switch_decision_yes:1 "信仰心が-50以下の時に§Y律法主義§!、50以上の時に§Y神秘主義§!を受容するミッションが解禁されます。"
  strengthen_the_dhimmi_reform:0 "ズィンミーの強化"
  strengthen_the_dhimmi_reform_desc:0 "ウラマーは文化の中心とみなされているものの、政府の重要な地位を占めるのはズィンミーである。"
