--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -775,7 +775,7 @@
  MODIFIER_VASSAL_FORCELIMIT_BONUS:0 "属国の扶養限界への貢献"
  MODIFIER_YEARS_OF_NATIONALISM:0 "分離主義の年数"
  MODIFIER_ACCEPTED_CULTURE_THRESHOLD:0 "受容文化許容範囲"
- MODIFIER_CULTURE_CONVERSION_COST:0 "文化変換コスト"
+ MODIFIER_CULTURE_CONVERSION_COST:0 "文化転向コスト"
  MODIFIER_DIPLOMATIC_ANNEXATION_COST:0 "外交併合コスト"
  MODIFIER_SHIP_DURABILITY:0 "船の耐久性"
  WAR_EXHAUSTION:0 "月間戦争疲弊"
@@ -7668,7 +7668,7 @@
  fervor_stability:0 "安定度への熱心な注力"
  fervor_stability_short:0 "安定度"
  fervor_base:0 "基本値"
- FERVOR_EFFECT:0 "$NAME|Y$を有効にすると、コストとして$COST|R$点の情熱が必要で、毎月同じ量の点を消費します。これを有効にしている間、次の効果が得られます："
+ FERVOR_EFFECT:0 "$NAME|Y$を有効にすると、コストとして$COST|R$点の情熱が必要で、毎月同量を消費します。有効中の効果："
  ENABLED:0 "有効"
  DISABLED:0 "無効"
  fervor_modifier:0 "情熱力"
