--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -618,8 +618,8 @@
  NO_PROVINCE_TO_BUILD_IN:0 "§R建設に利用できる州はありません。§!"
  BUILD_TO_ARMY_BUSY:0 "§Rユニットを追加しています…§!"
  CONFIRM_NATIVE_POLICY:0 "新しい原住民政策の確認"
- CONFIRM_NATIVE_POLICY_DESC:0 "我々の植民地で§Y$NAME$§!に変更することは安定度を§R1§!低下させ、さらに以下の効果があります：\n"
- CONFIRM_NATIVE_POLICY_FIRST_TIME_DESC:0 "我々の植民地で§Y$NAME$§!に変更することで以下の効果があります：\n"
+ CONFIRM_NATIVE_POLICY_DESC:0 "植民地で§Y$NAME$§!に変更すると、安定度が§R1§!低下し、さらに以下の影響があります：\n"
+ CONFIRM_NATIVE_POLICY_FIRST_TIME_DESC:0 "植民地で§Y$NAME$§!に変更した場合の効果：\n"
  NATIVE_UPRISING_CHANCE:0 "月ごとに原住民が蜂起する可能性が§Y$CHANCE$§!%あります。"
  POTENTIAL_NATIVE_UPRISING_CHANCE:0 "我々がこの州の植民地化を開始する場合、原住民が蜂起する確率が毎月§Y$CHANCE$§!%あります。"
  NATIVE_UPRISING_CHANCE_DELAYED:0 "原住民の蜂起の基本確率は§Y$BASE$§!%で、以下により補正されます：\n$MOD$"
