--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -48,8 +48,8 @@
  SLACKEN_AUTODISABLE_BTN1:0 "OK"
  SLACKEN_AUTODISABLE_BTN2:0 "OK"
  SLACKEN_AUTODISABLE_BTN3:0 "移動"
- ON_CONSTRUCTION_STARTED:0 "この建物の建築の開始によって、以下の効果が得られます："
- ON_CONSTRUCTION_CANCELED:0 "この建物の建築の中止によって、以下の効果が得られます："
+ ON_CONSTRUCTION_STARTED:0 "この建物の建築開始による影響："
+ ON_CONSTRUCTION_CANCELED:0 "この建物の建築中止による影響："
  TRADE_FAVORS_FOR_TRUST_NOAMOUNT:0 "好感度の量を$VAL|Y0$にすることはできません"
  MAPMODE_SCORCHED_EARTH:0 "焦土"
  MAPMODE_SCORCHED_EARTH_DESC:0 "焦土補正がある州が表示されます。"
@@ -155,7 +155,7 @@
  MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "革命衛兵扶養限界比率"
  MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "ラージプート扶養限界比率"
  OURSIDETRUCEENDS_TITLE:0 "停戦終了"
- OURSIDETRUCEENDS_SETUP:0 "自国と他国の間で一方的な停戦が終結した場合。"
+ OURSIDETRUCEENDS_SETUP:0 "自国と他国の間で一方的な停戦が終結したとき"
  OURSIDETRUCEENDS_HEADER:0 "宰相の報告"
  OURSIDETRUCEENDS_1:0 "一方的な停戦の終了"
  OURSIDETRUCEENDS_2:1 "$RECIPIENT$との停戦が終了した。"
