Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -2044,7 +2044,7 @@
  sufism_decree_reform:0 "スーフィズム勅令"
  sufism_decree_reform_desc:0 "スーフィズムは、イスラムの精神的および儀式的な性格に完全に焦点を当てた一連の実践と思考方法である。その多くの伝統と影響力は、自政府内にも影響を及ぼしている。"
  mechanic_same_religion_subject_bonus_yes:1 "我々の宗教に従う属国、辺境伯およびエヤレトは、真の信仰州の人的資源§G+25.0%§!、国家水兵補正§G+25.0%§!、生産効率§G+15.0%§!されます。"
- mechanic_unlock_ottoman_holy_orders_yes:0 "§Yスンニ§!と§Yイバーディ§!で§Yメヴレヴィー§!騎士団が解禁されます\n§Yシーア§!と§Yイバーディ§!で§Yベクタシュ§!騎士団が解禁されます"
+ mechanic_unlock_ottoman_holy_orders_yes:0 "§Yスンナ§!と§Yイバーディ§!で§Yメヴレヴィー§!騎士団が解禁されます\n§Yシーア§!と§Yイバーディ§!で§Yベクタシュ§!騎士団が解禁されます"
  same_religion_subject_bonus_mod:0 "フィクフ法"
  war_economy_reform:0 "戦時経済"
  war_economy_reform_desc:0 "国家の経済的安全保障は、戦争を行い勝利するための能力に基づいている。我が国の工場が持つ目的は、我々の軍事的野心の燃料になることのみである。"
@@ -2376,7 +2376,7 @@
  war_council_meeting_mod:0 "戦争評議会の召集"
  council_consensus:0 "評議会の総意"
  monthly_council_consensus:0 " 毎月の評議会の総意"
- council_consensus_gain_modifier:0 "評議会の総意獲得補正"
+ council_consensus_gain_modifier:0 "評議会の総意上昇補正"
  council_of_the_chamber_mod:0 "判事評議会への注力"
  desc_council_of_the_chamber_mod:0 "ヒスパニック評議会が召集された。"
  council_of_finance_mod:0 "財政評議会への注力"
@@ -2417,13 +2417,13 @@
  monthly_russian_modernization:0 "毎月の近代化"
  russian_modernization_gain_modifier:0 "近代化上昇補正"
  monthly_russian_administrative_rule:0 "毎月の統制支配"
- russian_administrative_rule_gain_modifier:0 "統治支配獲得補正"
+ russian_administrative_rule_gain_modifier:0 "統治支配上昇補正"
  monthly_russian_diplomatic_rule:0 "月間外交支配"
- russian_diplomatic_rule_gain_modifier:0 "外交支配獲得補正"
+ russian_diplomatic_rule_gain_modifier:0 "外交支配上昇補正"
  monthly_russian_military_rule:0 "毎月の軍事支配"
- russian_military_rule_gain_modifier:0 "軍事支配獲得補正"
+ russian_military_rule_gain_modifier:0 "軍事支配上昇補正"
  monthly_hessian_militarization:0 "月間傭兵の軍事化"
- hessian_militarization_gain_modifier:0 "傭兵の軍事化獲得補正"
+ hessian_militarization_gain_modifier:0 "傭兵の軍事化上昇補正"
  mevlevi_order:0 "メヴレヴィー教団"
  mevlevi_order_desc:0 "メヴレヴィー教団は、ジャラールッディーン・ムハンマド・バルヒーの信者によってコンヤで設立されたスーフィズムのスンナ派の分派である。この教団は、クルアーンとルーミーの著作の研究に専心している。"
  bektashi_order:0 "ベクタシュ教団"
@@ -2872,7 +2872,7 @@
  flavor_tur.249.a:0 "成文化に署名せよ。"
  flavor_tur.249.b:0 "今ではない。"
  flavor_tur.250.t:1 "バグダードの街"
- flavor_tur.250.desc:0 "バグダード、アッバース朝の古都！法の都！偉大なるカリフ、アル＝マンスールの都は、オスマン帝国の軍門に下り、尊敬される[Root.Monarch.GetName]こそがカリフ国の正当なる後継者です。ああ、この気高きバグダードは長きにわたって不正と辱めに苦しめられてきたのです…長年の困窮と冒涜の末に。最初は極東の下劣な遊牧民たちの手によって、次は恥知らずのティムール朝に、最後は「ペルシア帝国」と言われる者たちによる恐ろしい程ずさんな統治によって。ようやく、この最も尊敬される都市にふさわしい管理者です！バグダードが永遠にハナフィー法学の光り輝く道標となり、スンニ派の信仰を体現するすべての者たちに啓示をもたらす存在であり続けますように！"
+ flavor_tur.250.desc:0 "バグダード、アッバース朝の古都！法の都！偉大なるカリフ、アル＝マンスールの都は、オスマン帝国の軍門に下り、尊敬される[Root.Monarch.GetName]こそがカリフ国の正当なる後継者です。ああ、この気高きバグダードは長きにわたって不正と辱めに苦しめられてきたのです…長年の困窮と冒涜の末に。最初は極東の下劣な遊牧民たちの手によって、次は恥知らずのティムール朝に、最後は「ペルシア帝国」と言われる者たちによる恐ろしい程ずさんな統治によって。ようやく、この最も尊敬される都市にふさわしい管理者です！バグダードが永遠にハナフィー法学の光り輝く道標となり、スンナ派の信仰を体現するすべての者たちに啓示をもたらす存在であり続けますように！"
  flavor_tur.250.a:0 "革新と学術研究に胸が高鳴る！"
  flavor_tur.251.t:0 "スィパーヒーの改革"
  flavor_tur.251.desc:0 "彼らは残忍ですが規律があり、多くの異教徒が彼らの剣や弓により倒れました。タタール人は実に手ごわく、熟練した戦闘力を持っています。この戦士たちの力を借りる機会を前にしており、それによって自国のスィパーヒーの能力を大幅に拡大できます。自軍の戦力強化には疑いの余地がないのですが、一部の者はイェニチェリや貴族がこのような取り決めに対して不快感を抱くのではないかと恐れています。"
